--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,41 @@
   </head>
 
   <body>
-	  <h1>HTML-ёнок</h1>
+    <canvas id="stars"></canvas> <!-- Звёзды -->
+
+    <div class="panel">
+      <div class="vertical-center">
+        <img src="./assets/logo.png">
+
+        <h1>HTML-ёнок</h1>        
+        <h2>Турнир по скоростной разметке сайтов для учащихся 3–5 классов</h2>
+      </div>
+    </div>
+
+    <div class="panel">
+      <div class="vertical-center">
+        <div class="column">
+          <img src="./assets/registration.png">
+          <h3>Регистрируешься</h3>
+        </div>
+
+        <div class="arrow">→</div>
+
+        <div class="column">
+          <img src="./assets/html.png">
+          <h3>Делаешь сайт</h3>
+        </div>
+
+        <div class="arrow">→</div>
+
+        <div class="column">
+          <img src="./assets/certificate.png">
+          <h3>Получаешь диплом</h3>
+        </div>
+      </div>
+    </div>
+
+    <div class="panel"></div>
   </body>
 
 </html>
