Третья панель и дата

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
 
         <h1>HTML-ёнок</h1>        
         <h2>Турнир по скоростной разметке сайтов для учащихся 3–5 классов</h2>
+
+        <h2 id="date">29 ноября 2014</h2>
       </div>
     </div>
 
@@ -50,7 +52,15 @@
       </div>
     </div>
 
-    <div class="panel"></div>
+    <div class="panel">
+      <div class="vertical-center">
+        <p>
+Чтобы зарегистрироваться, пришли это<br><br>
+<img src="./assets/registration.png"><br><br>
+сюда<br><br>
+<a href="mailto:programmers@rambler.ru">programmers@rambler.ru</a>
+      </div>
+    </div>
   </body>
 
 </html>
